# Drone-Flight-Controller-Cpp

./: .gitignore  CMakeLists.txt
conf/: descrete_pid_parameters.conf  esc_parameters.conf  inner_descrete_pid_parameters.conf  kalman_filter.conf  mpu9250.conf  outer_descrete_pid_parameters.conf  physical_parameters.conf  test_config_bool.conf  test_config_double.conf  vihecle_parameters.conf
data/: plot_logdata_for_articles.py  plot_mag_calib.py  plot_pid.py
include/pigpio-master/: libpigpio.so.1  libpigpiod_if.so.1  libpigpiod_if2.so.1  pig2vcd  pigpiod  pigs  x_pigpio  x_pigpiod_if  x_pigpiod_if2
sh/: build.sh  init.sh  kill_pigpiod.sh  make.sh  reset.sh  setup_bt_library.sh  setup_raspberrypi.sh  test.sh  trun.sh
src/: CMakeLists.txt  blackbox_logger.cc  blackbox_logger.hpp  bme280.cc  bme280.hpp  config_loader.cc  config_loader.hpp  convert_output2duty.cc  convert_output2duty.hpp  descrete_pid_controller.cc  descrete_pid_controller.hpp  get_inertial_height.cc  get_inertial_height.hpp  kalman_filter.cc  kalman_filter.hpp  main.cc  motor_control.cc  motor_control.hpp  mpu9250.cc  mpu9250.hpp  nonlinear_transformer.cc  nonlinear_transformer.hpp  recieve_bt_input.cpp  recieve_bt_input.hpp  system_atittude_pid_controller.cc  system_atittude_pid_controller.hpp  system_position_pid_controller.cc  system_position_pid_controller.hpp  use_sensor.cc  use_sensor.hpp
test/: CMakeLists.txt  caliblate_mag.cc  flight_simulator.cc  test_config_loader.cc  test_mpu9250.cc  test_run_bme280.cc  test_run_config_loader.cc  test_run_convert_output2duty.cc  test_run_descrete_pid_controller.cc  test_run_get_inertial_height.cc  test_run_kalman_filter.cc  test_run_motors.cc  test_run_mpu9250.cc  test_run_nonlinear_transformer.cc  test_run_system_atittude_pid_controller.cc  test_run_system_position_pid_controller.cc  test_use_sensor.cc
